test/files/neg/outer-ref-checks.check
outer-ref-checks.scala:6: warning: The outer reference in this type test cannot be checked at run time.
  final case class Inner(val s: String) // unchecked warning
                   ^
outer-ref-checks.scala:9: warning: The outer reference in this type test cannot be checked at run time.
    case Inner(s) => // unchecked warning
              ^
outer-ref-checks.scala:19: warning: The outer reference in this type test cannot be checked at run time.
    case Inner(s) => // unchecked warning
              ^
outer-ref-checks.scala:20: warning: The outer reference in this type test cannot be checked at run time.
    case O.Inner(s) => // unchecked warning
                ^
outer-ref-checks.scala:42: warning: The outer reference in this type test cannot be checked at run time.
    case Inner(s) => // unchecked warning
              ^
outer-ref-checks.scala:47: warning: The outer reference in this type test cannot be checked at run time.
    case _: Inner => // unchecked warning
          ^
outer-ref-checks.scala:57: warning: The outer reference in this type test cannot be checked at run time.
    case _: (Inner @uncheckedVariance) => // unchecked warning
          ^
error: No warnings can be incurred under -Xfatal-warnings.
7 warnings found
one error found
